--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -5,10 +5,11 @@ debug: false
 
 data:
   data_dir: "data/"
-  batch_size: 512
+  batch_size: 2048
   num_workers: 16
   window_size: 512
   preload: true
+  pin_memory: true
   cache_size: 1000
   
   sampling:
@@ -68,6 +69,7 @@ model:
     embedding_dim: 16
 
 training:
+  optimizer: "fused_adamw"
   epochs: 50
   learning_rate: 0.001
   weight_decay: 1e-4
@@ -75,6 +77,10 @@ training:
   loss_type: "focal" # Options: "focal" (Class Imbalance), "ce" (Cross Entropy)
   mask_unlabeled: true
   save_dir: "checkpoints/"
+
+cross_validation:
+  enabled: true
+  n_folds: 5
 
 post_processing:
   min_duration: 5 # Minimum frames for an action
