--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -5,7 +5,7 @@ debug: false
 
 data:
   data_dir: "data/"
-  batch_size: 1 #2048
+  batch_size: 2048
   num_workers: 16
   window_size: 512
   preload: true
