--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -6,14 +6,14 @@ test: false
 
 data:
   data_dir: "data/"
-  batch_size: 4096
-  num_workers: 4
+  batch_size: 1024
+  num_workers: 12
   window_size: 512
-  preload: true
+  preload: false
   pin_memory: true
-  prefetch_factor: 2
+  prefetch_factor: 4
   persistent_workers: true
-  cache_size: 1000
+  cache_size: 32
   
   sampling:
     strategy: "uniform" # Options: "uniform", "action_rich" (oversample rare classes)
