--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -8,14 +8,14 @@ test: false
 # For Linux/AutoDL, use absolute paths to data disk (e.g., /root/autodl-tmp/...)
 data:
   data_dir: "data/" # Path to the directory containing train.csv and tracking/annotation folders
-  batch_size: 1024 # Increased back to 1024. 96GB VRAM can easily handle this now.
-  num_workers: 8 # Increased to 8 to keep GPU fed.
+  batch_size: 512 # Reduced to 512 for stability. Can increase to 1024 if stable.
+  num_workers: 4 # Reduced to 4 to save RAM.
   window_size: 512
-  preload: false # Keep false. 105GB raw data + 110GB RAM is too risky.
+  preload: false # Keep false.
   pin_memory: true
-  prefetch_factor: 2 # Increased to 2.
-  persistent_workers: true # Set to true for faster epoch transitions.
-  cache_size: 16 # Increased cache per worker.
+  prefetch_factor: 2
+  persistent_workers: true
+  cache_size: 4 # Reduced cache size per worker.
   
   sampling:
     strategy: "uniform" # Options: "uniform", "action_rich" (oversample rare classes)
@@ -81,7 +81,9 @@ training:
   scheduler: "cosine" # Options: "cosine", "step", "plateau"
   loss_type: "focal" # Options: "focal" (Class Imbalance), "ce" (Cross Entropy)
   mask_unlabeled: true
-  save_dir: "/root/autodl-tmp/checkpoints/" #"checkpoints/" # Directory to save model weights and metrics  torch_compile: false # Disable to save memory during startup
+  save_dir: "/root/autodl-tmp/checkpoints/" #"checkpoints/" # Directory to save model weights and metrics
+  torch_compile: false # Disable to save memory during startup and avoid compilation overhead
+
 cross_validation:
   enabled: true
   n_folds: 5
