--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -11,11 +11,11 @@ data:
   batch_size: 2048 # Increased to 2048 to fill GPU.
   num_workers: 16 # Increased to 16 to feed the GPU.
   window_size: 512
-  preload: false # Keep false.
+  preload: true # Enabled! Data is only 2.63GB, safe to load into RAM.
   pin_memory: true
   prefetch_factor: 2
   persistent_workers: true
-  cache_size: 8 # Increased slightly.
+  cache_size: 8 # Ignored when preload is true.
   
   sampling:
     strategy: "uniform" # Options: "uniform", "action_rich" (oversample rare classes)
