--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -80,8 +80,9 @@ training:
   learning_rate: 0.001
   weight_decay: 0.0001
   scheduler: "cosine" # Options: "cosine", "step", "plateau"
-  loss_type: "focal" # Options: "focal", "ce", "bce", "ohem", "macro_soft_f1"
-  pos_weight: 10.0 # Weight for positive class in BCE
+  loss_type: "bce" # Options: "focal", "ce", "bce", "ohem", "macro_soft_f1"
+  pos_weight: 10.0 # Default weight, overridden if dynamic_pos_weight is true
+  dynamic_pos_weight: true # Enabled: Calculate pos_weight per batch based on actual ratio
   ohem_percent: 0.7 # For OHEM loss
   mask_unlabeled: true
   save_dir: "/root/autodl-tmp/checkpoints/" #"checkpoints/" # Directory to save model weights and metrics
