--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -8,9 +8,9 @@ test: false
 # For Linux/AutoDL, use absolute paths to data disk (e.g., /root/autodl-tmp/...)
 data:
   data_dir: "/root/Mice-Social-Action-V2/data/" # Path to the directory containing train.csv and tracking/annotation folders
-  batch_size: 2048 # Increased for RTX 6000 96GB.
+  batch_size: 4096 # Increased for RTX 6000 96GB.
   num_workers: 16 # Increased for AutoDL high-core count.
-  window_size: 512
+  window_size: 1024 # Increased for more temporal context.
   preload: true # Enabled! Data is only 2.63GB, safe to load into RAM.
   pin_memory: true
   prefetch_factor: 4
@@ -50,25 +50,26 @@ model:
   spatial_encoder:
     enabled: true
     type: "gat" # Options: "gat" (Graph Attention), "st_gcn" (Spatio-Temporal GCN), "identity"
-    hidden_dim: 64
-    num_layers: 2
+    hidden_dim: 128
+    num_layers: 3
     dropout: 0.1
     
   temporal_backbone:
     type: "squeezeformer" # Options: "squeezeformer" (Attention+Conv), "wavenet" (Dilated Conv), "transformer", "multi_scale_cnn"
     input_dim: 0 # Will be set dynamically in train.py
-    hidden_dim: 128
-    num_layers: 4
+    hidden_dim: 256
+    num_layers: 6
     kernel_size: 3
     dropout: 0.2
+    transformer_heads: 8
     
   fusion:
     type: "attention" # Options: "attention" (Weighted Sum), "concat" (Concatenation), "gated"
-    hidden_dim: 256
+    hidden_dim: 512
     
   classifier:
     num_classes: 76 # Interaction, Investigation, Other
-    hidden_dim: 128
+    hidden_dim: 256
     
   context_adapter:
     enabled: true
@@ -96,7 +97,7 @@ post_processing:
   optimize_thresholds: true
   tie_breaking: "z_score" # Options: "none", "z_score", "argmax"
   smoothing:
-    method: "median_filter" # Options: "median_filter", "ema", "none"
+    method: "ema" # Options: "median_filter", "ema", "none"
     window_size: 7
     alpha: 0.3 # For EMA
   gap_filling:
