--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -10,7 +10,7 @@ data:
   data_dir: "/root/Mice-Social-Action-V2/data/" # Path to the directory containing train.csv and tracking/annotation folders
   batch_size: 4096 # Increased for RTX 6000 96GB.
   num_workers: 8 # Increased for AutoDL high-core count.
-  window_size: 1024 # Increased for more temporal context.
+  window_size: 512
   preload: true # Enabled! Data is only 2.63GB, safe to load into RAM.
   pin_memory: true
   prefetch_factor: 4
