--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -9,12 +9,12 @@ test: false
 data:
   data_dir: "/root/Mice-Social-Action-V2/data/" # Path to the directory containing train.csv and tracking/annotation folders
   batch_size: 2048 # Increased for RTX 6000 96GB.
-  num_workers: 2 # Increased for AutoDL high-core count.
+  num_workers: 16 # Increased for AutoDL high-core count.
   window_size: 512
   preload: true # Enabled! Data is only 2.63GB, safe to load into RAM.
   pin_memory: true
   prefetch_factor: 2
-  persistent_workers: true
+  persistent_workers: false
   cache_size: 8 # Ignored when preload is true.
   
   sampling:
@@ -79,7 +79,7 @@ model:
 training:
   optimizer: "fused_adamw"
   epochs: 50
-  eval_interval: 1
+  eval_interval: 10
   learning_rate: 0.001
   weight_decay: 0.0001
   scheduler: "cosine" # Options: "cosine", "step", "plateau"
