--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -79,7 +79,7 @@ model:
 training:
   optimizer: "fused_adamw"
   epochs: 50
-  eval_interval: 1
+  eval_interval: 10 # Run full post-processing every 10 epochs to save time/memory
   learning_rate: 0.001
   weight_decay: 0.0001
   scheduler: "cosine" # Options: "cosine", "step", "plateau"
@@ -96,7 +96,7 @@ cross_validation:
   n_folds: 5
 
 post_processing:
-  n_jobs: 1
+  n_jobs: 8 # Increased for faster processing with 110GB RAM headroom
   optimize_thresholds: true
   tie_breaking: "z_score" # Options: "none", "z_score", "argmax"
   smoothing:
