--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -79,7 +79,7 @@ model:
 training:
   optimizer: "fused_adamw"
   epochs: 50
-  eval_interval: 10 # Run full post-processing every 10 epochs to save time/memory
+  eval_interval: 1
   learning_rate: 0.001
   weight_decay: 0.0001
   scheduler: "cosine" # Options: "cosine", "step", "plateau"
