--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -19,7 +19,7 @@ data:
   
   sampling:
     strategy: "action_rich" # Options: "uniform", "action_rich" (oversample rare classes)
-    bias_factor: 2.0
+    bias_factor: 5.0
 
   preprocessing:
     target_fps: 30
@@ -79,12 +79,12 @@ model:
 training:
   optimizer: "fused_adamw"
   epochs: 50
-  eval_interval: 10
+  eval_interval: 1
   learning_rate: 0.001
   weight_decay: 0.0001
   scheduler: "cosine" # Options: "cosine", "step", "plateau"
   loss_type: "bce" #"bce" # Options: "focal", "ce", "bce", "ohem", "macro_soft_f1"
-  pos_weight: 2.0 # Default weight, overridden if dynamic_pos_weight is true
+  pos_weight: 12.0 # Default weight, overridden if dynamic_pos_weight is true
   dynamic_pos_weight: false # Enabled: Calculate pos_weight per batch based on actual ratio
   ohem_percent: 0.7 # For OHEM loss
   mask_unlabeled: true
@@ -97,8 +97,8 @@ cross_validation:
 
 post_processing:
   n_jobs: 8 # Increased for faster processing with 110GB RAM headroom
-  threshold_strategy: "kaggle" # Options: "dynamic" (Grid Search), "kaggle" (Hardcoded per-lab), "fixed" (0.5)
-  optimize_thresholds: false # Deprecated, kept for backward compatibility (if true and strategy is dynamic, runs grid search)
+  threshold_strategy: "optimize" # Options: "dynamic" (Grid Search), "kaggle" (Hardcoded per-lab), "fixed" (0.5)
+  optimize_thresholds: true # Deprecated, kept for backward compatibility (if true and strategy is dynamic, runs grid search)
   tie_breaking: "kaggle" # Options: "none", "z_score", "argmax", "kaggle" (Rule-based)
   smoothing:
     method: "ema" # Options: "median_filter", "ema", "none"
