--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -26,7 +26,7 @@ data:
     fix_fps: true
     interpolate_nans: true
     unify_body_parts: true
-    view: "allocentric" # Options: "allocentric", "egocentric" (mouse-centered)
+    view: "egocentric" # Options: "allocentric", "egocentric" (mouse-centered)
     
   features:
     enable_strong_features: true
@@ -56,7 +56,7 @@ model:
     dropout: 0.1
     
   temporal_backbone:
-    type: "squeezeformer" # Options: "squeezeformer" (Attention+Conv), "wavenet" (Dilated Conv), "transformer", "multi_scale_cnn"
+    type: "wavenet" # Options: "squeezeformer" (Attention+Conv), "wavenet" (Dilated Conv), "transformer", "multi_scale_cnn"
     input_dim: 0 # Will be set dynamically in train.py
     hidden_dim: 512 #256
     num_layers: 8 #6
