--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -54,7 +54,7 @@ model:
     dropout: 0.1
     
   temporal_backbone:
-    type: "wavenet" # Options: "squeezeformer" (Attention+Conv), "wavenet" (Dilated Conv), "transformer", "multi_scale_cnn"
+    type: "squeezeformer" # Options: "squeezeformer" (Attention+Conv), "wavenet" (Dilated Conv), "transformer", "multi_scale_cnn"
     input_dim: 0
     hidden_dim: 512
     num_layers: 8
@@ -81,7 +81,7 @@ training:
   learning_rate: 0.001
   weight_decay: 0.0001
   scheduler: "cosine" # Options: "cosine", "step", "plateau"
-  loss_type: "bce" # Options: "focal", "ce", "bce", "ohem", "macro_soft_f1"
+  loss_type: "focal" # Options: "focal", "ce", "bce", "ohem", "macro_soft_f1"
   pos_weight: 12.0
   dynamic_pos_weight: false
   ohem_percent: 0.7
