--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -83,6 +83,8 @@ training:
   scheduler: "cosine" # Options: "cosine", "step", "plateau"
   loss_type: "focal" # Options: "focal", "ce", "bce", "ohem", "macro_soft_f1"
   pos_weight: 12.0
+  focal_gamma: 2.0
+  focal_alpha: 0.25
   dynamic_pos_weight: false
   ohem_percent: 0.7
   mask_unlabeled: true
