--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -63,7 +63,7 @@ model:
     transformer_heads: 16
     
   fusion:
-    type: "attention" # Options: "attention" (Weighted Sum), "concat" (Concatenation), "gated"
+    type: "concat" # Options: "attention" (Weighted Sum), "concat" (Concatenation), "gated"
     hidden_dim: 1024
     
   classifier:
