--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -48,7 +48,9 @@ data:
 model:
   spatial_encoder:
     enabled: true
-    type: "gat" # Options: "gat" (Graph Attention), "st_gcn" (Spatio-Temporal GCN), "identity"
+    type: "gat" # Options: "spatialGNN" (MLP-like), "st_gcn" (Spatio-Temporal GCN), "gat" (Graph Attention)
+    use_adj: true # Whether to use adjacency matrix constraints
+    num_nodes: 7 # Number of keypoints/nodes after unification (set based on dataset)
     hidden_dim: 128
     num_layers: 3
     dropout: 0.1
