--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -48,8 +48,8 @@ data:
 model:
   spatial_encoder:
     enabled: true
-    type: "st_gcn" # Options: "spatialGNN" (MLP-like), "st_gcn" (Spatio-Temporal GCN), "gat" (Graph Attention)
-    use_adj: false # Whether to use adjacency matrix constraints
+    type: "gat" # Options: "spatialGNN" (MLP-like), "st_gcn" (Spatio-Temporal GCN), "gat" (Graph Attention)
+    use_adj: true # Whether to use adjacency matrix constraints
     num_nodes: 7 # Number of keypoints/nodes after unification (set based on dataset)
     hidden_dim: 128
     num_layers: 3
