--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -49,7 +49,7 @@ model:
   spatial_encoder:
     enabled: true
     type: "gat" # Options: "spatialGNN" (MLP-like), "st_gcn" (Spatio-Temporal GCN), "gat" (Graph Attention)
-    use_adj: false # Whether to use adjacency matrix constraints
+    use_adj: true # Whether to use adjacency matrix constraints
     num_nodes: 7 # Number of keypoints/nodes after unification (set based on dataset)
     hidden_dim: 128
     num_layers: 4
@@ -76,7 +76,7 @@ model:
   context_adapter:
     enabled: true
     embedding_dim: 16
-    use_subject_ids: false # New: Whether to use individual mouse IDs (caution: risk of overfitting)
+    use_subject_ids: true # New: Whether to use individual mouse IDs (caution: risk of overfitting)
 
 training:
   optimizer: "fused_adamw"
@@ -86,7 +86,7 @@ training:
   learning_rate: 0.001
   weight_decay: 0.0001
   scheduler: "cosine" # Options: "cosine", "step", "plateau"
-  loss_type: "new_focal" # Options: "focal" (fixed weight), "new_focal" (dataset-aware weights), "ce", "bce", "ohem", "macro_soft_f1"
+  loss_type: "focal" # Options: "focal" (fixed weight), "new_focal" (dataset-aware weights), "ce", "bce", "ohem", "macro_soft_f1"
   pos_weight: 12.0
   focal_gamma: 2.0
   focal_alpha: 0.25
