--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -82,7 +82,7 @@ training:
   optimizer: "fused_adamw"
   epochs: 200
   eval_interval: 10
-  stop_loss_threshold: 0.0001
+  stop_loss_threshold: 1.0e-10
   learning_rate: 0.001
   weight_decay: 0.0001
   scheduler: "cosine" # Options: "cosine", "step", "plateau"
