--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -65,7 +65,7 @@ model:
     transformer_heads: 16
     
   fusion:
-    type: "concat" # Options: "attention" (Modulation), "concat" (Concatenation), "gated" (Learned Mix)
+    type: "attention" # Options: "attention" (Modulation), "concat" (Concatenation), "gated" (Learned Mix)
     hidden_dim: 1024
     dropout: 0.1
     
