--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -48,7 +48,7 @@ data:
 model: 
   spatial_encoder:
     enabled: true
-    type: "st_gcn" # Options: "spatialGNN" (MLP-like), "st_gcn" (Spatio-Temporal GCN), "gat" (Graph Attention)
+    type: "gat" # Options: "spatialGNN" (MLP-like), "st_gcn" (Spatio-Temporal GCN), "gat" (Graph Attention)
     use_adj: true # Whether to use adjacency matrix constraints
     num_nodes: 7 # Number of keypoints/nodes after unification (set based on dataset)
     hidden_dim: 128
@@ -56,7 +56,7 @@ model:
     dropout: 0.1
     
   temporal_backbone:
-    type: "wavenet" # Options: "squeezeformer" (Attention+Conv), "wavenet" (Dilated Conv), "transformer", "multi_scale_cnn"
+    type: "squeezeformer" # Options: "squeezeformer" (Attention+Conv), "wavenet" (Dilated Conv), "transformer", "multi_scale_cnn"
     input_dim: 0
     hidden_dim: 512
     num_layers: 8
