--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -110,11 +110,11 @@ post_processing:
     start: 0.001
     end: 0.95
     step: 0.005
-  tie_breaking: "z_score" # Options: "none", "z_score", "argmax", "kaggle" (Rule-based)
+  tie_breaking: "none" # Options: "none", "z_score", "argmax", "kaggle" (Rule-based)
   smoothing:
-    method: "ema" # Options: "median_filter", "ema", "none"
-    window_size: 7
-    alpha: 0.3
+    method: "median_filter" # Options: "median_filter", "ema", "none"
+    window_size: 5
+    alpha: 0.8 # Only used for EMA (higher = less smoothing)
   gap_filling:
     max_gap: 10
     min_duration: 5
