--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -48,7 +48,7 @@ data:
 model: 
   spatial_encoder:
     enabled: true
-    type: "spatialGNN" # Options: "spatialGNN" (MLP-like), "st_gcn" (Spatio-Temporal GCN), "gat" (Graph Attention)
+    type: "st_gcn" # Options: "spatialGNN" (MLP-like), "st_gcn" (Spatio-Temporal GCN), "gat" (Graph Attention)
     use_adj: true # Whether to use adjacency matrix constraints
     num_nodes: 7 # Number of keypoints/nodes after unification (set based on dataset)
     hidden_dim: 128
@@ -65,7 +65,7 @@ model:
     transformer_heads: 16
     
   fusion:
-    type: "attention" # Options: "attention" (Modulation), "concat" (Concatenation), "gated" (Learned Mix)
+    type: "concat" # Options: "attention" (Modulation), "concat" (Concatenation), "gated" (Learned Mix)
     hidden_dim: 1024
     dropout: 0.1
     
