--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -49,7 +49,7 @@ model:
   spatial_encoder:
     enabled: true
     type: "st_gcn" # Options: "spatialGNN" (MLP-like), "st_gcn" (Spatio-Temporal GCN), "gat" (Graph Attention)
-    use_adj: false # Whether to use adjacency matrix constraints
+    use_adj: true # Whether to use adjacency matrix constraints
     num_nodes: 7 # Number of keypoints/nodes after unification (set based on dataset)
     hidden_dim: 128
     num_layers: 4
@@ -112,7 +112,7 @@ post_processing:
     step: 0.005
   tie_breaking: "z_score" # Options: "none", "z_score", "argmax", "kaggle" (Rule-based)
   smoothing:
-    method: "median_filter" # Options: "median_filter", "ema", "none"
+    method: "none" # Options: "median_filter", "ema", "none"
     window_size: 5
     alpha: 0.8 # Only used for EMA (higher = less smoothing)
   gap_filling:
