--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -86,7 +86,7 @@ training:
   learning_rate: 0.001
   weight_decay: 0.0001
   scheduler: "cosine" # Options: "cosine", "step", "plateau"
-  loss_type: "focal" # Options: "focal" (fixed weight), "new_focal" (dataset-aware weights), "ce", "bce", "ohem", "macro_soft_f1"
+  loss_type: "new_focal" # Options: "focal" (fixed weight), "new_focal" (dataset-aware weights), "ce", "bce", "ohem", "macro_soft_f1"
   pos_weight: 12.0
   focal_gamma: 2.0
   focal_alpha: 0.25
@@ -110,7 +110,7 @@ post_processing:
     start: 0.001
     end: 0.95
     step: 0.005
-  tie_breaking: "z_score" # Options: "none", "z_score", "argmax", "kaggle" (Rule-based)
+  tie_breaking: "none" # Options: "none", "z_score", "argmax", "kaggle" (Rule-based)
   smoothing:
     method: "median_filter" # Options: "median_filter", "ema", "none"
     window_size: 5
